<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">



        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_city_background_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <!-- Logo Text -->
        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAuthContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/app_padding_horizontal">

        <!--Email Login Box-->
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:translationZ="@dimen/default_translation_z"
            app:cardCornerRadius="@dimen/default_corner_radius"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_min_height"
                android:drawableStart="@color/white"
                android:minHeight="48dp"
                app:boxBackgroundMode="none"
                app:expandedHintEnabled="false"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/sign_in_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sign_in_frame_view"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textColorHint="@color/text_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <!--Password Login Box-->
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:translationZ="@dimen/default_translation_z"
            app:cardCornerRadius="@dimen/default_corner_radius"
            app:layout_constraintTop_toBottomOf="@id/layoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_min_height"
                android:minHeight="48dp"
                app:boxBackgroundMode="none"
                app:expandedHintEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/vector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sign_in_frame_view"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textColorHint="@color/text_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <!-- Error Label with background -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblError"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_error_top_textedit"
            android:visibility="invisible"
            android:text="@string/email_pass_wrong"
            android:textColor="@color/white"
            android:textSize="@dimen/text_auth_err_size"
            android:background="@drawable/bg_error_message"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/layoutPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Sign In Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/ButtonSignIn"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_btn"
            app:layout_constraintTop_toBottomOf="@id/lblError"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Sign Up Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/ButtonSignUp"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_btn"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Lớp phủ hiển thị loading (progress overlay) -->
    <include layout="@layout/progress_overlay"/>
</androidx.constraintlayout.widget.ConstraintLayout>