...
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:src="@drawable/ic_person"
                                android:contentDescription="User icon"/>

                            <TextView
                                android:id="@+id/tv_user_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginStart="8dp"
                                android:text="@string/exp_user"
                                android:textColor="@color/white"
...
                                    android:contentDescription="Transaction history icon"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="Lịch sử giao dịch"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="0.5dp"
...
                                    android:contentDescription="Account and card icon"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="Tài khoản"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
...
