...
    android:layout_height="match_parent"
    android:padding="@dimen/staff_list_item_spacing_outer"
    tools:context=".UsersListFragment">

    <!-- THÊM Ô TÌM KIẾM VÀO ĐÂY -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view_customers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:iconifiedByDefault="false"
        app:queryHint="Tìm kiếm theo tên hoặc email..."
        android:background="@drawable/search_view_background"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_view_customers"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
...
